--- a/src/site/markdown/usage.md.vm
+++ b/src/site/markdown/usage.md.vm
@@ -39,7 +39,7 @@ ${symbol_pound}${symbol_pound}${symbol_pound} Archetype parameters
 | **ansibleVaultPassword**            |           | Password for Ansible Vault encryption of all sensitive data in repository
 | _AWS settings_                      |           | |
 | **awsRegion**                       | eu-west-1 | AWS region
-| **awsMachineSize**                  | small     | AWS machine size (translates to fitting AWS instance types) - small/medium/large
+| **awsMachineSize**                  | medium    | AWS machine size (translates to fitting AWS instance types) - `small`/`medium`/`large`
 | _Java SDK_                          |           | |
 | **javaMajorVersion**                | 8         | Java major version 
 | **javaMinorVersion**                | 181       | Java minor version
