--- a/src/site/markdown/usage.md.vm
+++ b/src/site/markdown/usage.md.vm
@@ -52,7 +52,7 @@ ${symbol_pound}${symbol_pound}${symbol_pound} Archetype parameters
 | **optionTerraform**                 | y         | Include Terraform definition to setup infrastructure on AWS
 | **optionAnsible**                   | y         | Include Ansible playbooks to deploy AEM infrastructure
 
-\*) Sensible default
+\*) Sensible default<br/>
 \*\*) Default Java SDK download base URL: `http://download.oracle.com/otn-pub/java`
 
 
@@ -120,7 +120,7 @@ ${symbol_pound}${symbol_pound}${symbol_pound} Requirements
 * JDK 1.8
 * Apache Maven 3.3.9 or higher
 * Include the [Adobe Public Maven Repository][adobe-public-maven-repo] in your maven settings, see [wcm.io Maven Repositories][wcmio-maven] for details.
-* *Important*: You have to manually upload the AEM Quickstart JAR and AEM dispatcher binaries to your Maven Artifact Manager following [these conventions][aem-binaries-conventions] for naming them.
+* **Important**: You have to manually upload the AEM Quickstart JAR and AEM dispatcher binaries to your Maven Artifact Manager following [these conventions][aem-binaries-conventions] for naming them.
 
 
 [adobe-public-maven-repo]: https://repo.adobe.com/nexus/content/groups/public/
