--- a/src/site/markdown/usage.md.vm
+++ b/src/site/markdown/usage.md.vm
@@ -102,7 +102,7 @@ mvn archetype:generate -DinteractiveMode=false \
   -DoptionTerraform=n \
   -DoptionVagrant=n \
   -DansibleVaultPassword=mypassword \
-  -aemAdminPassword=admin \
+  -DaemAdminPassword=admin \
   -DmavenRepositoryUrl=http://your-maven-repository-url/ \
   -DmavenRepositoryUser=user \
   -DmavenRepositoryPassword=password
