Make AEM major version configurable. Defaults to AEM 6.5.

--- a/src/site/markdown/usage.md.vm
+++ b/src/site/markdown/usage.md.vm
@@ -45,6 +45,8 @@ ${symbol_pound}${symbol_pound}${symbol_pound} Archetype parameters
 | _File references_                   |           | |
 | **sshPublicKeyFile**                | id_rsa.pub         | Path to SSH Public key that is used for authentication on the AWS machines (only required when optionTerraform='y')
 | **aemLicensePropertiesFile**        | license.properties | Path to AEM license.properties file
+| _AEM version_                       |           | |
+| **optionAemVersion**                | 6.5       | AEM major version (6.3, 6.4 or 6.5)
 | _Feature flags_                     |           | |
 | **optionVagrant**                   | y         | Include vagrant file to set up an Ansible control host in a local VM
 | **optionTerraform**                 | y         | Include Terraform definition to setup infrastructure on AWS
@@ -70,6 +72,7 @@ mvn archetype:generate -DinteractiveMode=false \
   -DgroupId=io.wcm.samples \
   -DartifactId=io.wcm.samples \
   -Dversion=1.3.0 \
+  -DoptionAemVersion=6.5 \
   -DoptionAnsible=y \
   -DoptionTerraform=y \
   -DoptionVagrant=y \
@@ -98,6 +101,7 @@ mvn archetype:generate -DinteractiveMode=false \
   -DgroupId=io.wcm.samples \
   -DartifactId=io.wcm.samples \
   -Dversion=1.3.0 \
+  -DoptionAemVersion=6.5 \
   -DoptionAnsible=y \
   -DoptionTerraform=n \
   -DoptionVagrant=n \
